d3-gateway/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-web
  name: prod-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-web
  strategy: {}
  template:
    metadata:
      labels:
        app: prod-web
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
