d3-gateway/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-web
  name: prod-web-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prod-web
status:
  loadBalancer: {}
