d3-gateway/rt.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prod
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: prod-web-svc
      port: 8080
